Fix overflow problems with more than 10 stations

--- a/static/src/styles/widgets.scss
+++ b/static/src/styles/widgets.scss
@@ -874,11 +874,13 @@
 
 .estacio-computer {
     .computer-widgets {
+        margin-top: 90px;
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 25px;
-        height: 565px;
+        overflow: scroll;
+
     }
 }
 
@@ -886,10 +888,11 @@
     user-select: none;
     padding: 15px; 
     border-radius: 10px; 
-    border: 1px solid $light-grey; 
+    border: 1px solid $light-grey;
     
     .grid-row-computer {
         display: flex;
+        justify-content: center;
         
         .step {
             height: 18px;
@@ -919,22 +922,22 @@
             font-size: 12px;
             margin-right: 10px;
             line-height: 25px;
-            width: 120px;
+            width: 80px;
             text-align: right;
-            position: absolute;
-            left: -135px;
+            position: relative;
+            //left: -135px;
         }
+    
+        
     }
 }
 
-
 .spectrum-graph {
-    width: 800px;
-    height: 100%;
-    border: 1px solid $light-grey;
+    width: 778px;
+    height: 350px;
+    border: 1px solid $grey;
     border-radius: 10px;
     padding: 0;
-    overflow: hidden;
 }
 
 
